fix: scrollbar in tables

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,7 +104,7 @@ article.main-content {
 }
 
 .table-wrapper {
-  overflow: scroll;
+  overflow: auto;
 }
 
 details {
